# TvSorter

./: .gitignore  DEV.md  README.md  pyproject.toml
docs/: DEPLOYMENT.md  PRD.md
scripts/: create-proxmox-lxc.sh  tvsorter-access.sh  update-tvsorter.sh
static/: app.css  app.js
templates/: base.html  browse.html  history.html  import_results.html  library.html  match.html  preview.html  settings.html
tests/: test_db.py  test_filesystem.py  test_formatting.py  test_import_jobs.py  test_importer.py  test_naming.py  test_parser.py  test_providers.py
tvsorter/: __init__.py  config.py  db.py  filesystem.py  formatting.py  importer.py  library.py  main.py  naming.py  parser.py  providers.py
